# fact

./: .env.example  .gitignore  CLAUDE.md  deploy.bat  pyproject.toml
app/: config.py  main.py
app/api/: routes.py  ws.py
app/capture/: stream.py
app/checker/: classifier.py  prompts.py  verifier.py
app/models/: schemas.py
app/rag/: loader.py  store.py
app/stt/: refiner.py  whisper.py
frontend/: app.js  index.html  style.css
scripts/: deploy.sh  setup.sh  start.sh  stop.sh  upload-data.bat
